Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22843

QML engine crashes with imported script that has syntax error

    XMLWordPrintable

Details

    • 699b74dc1d288af3d1aaeb02335c10c21f37f56a

    Description

      foo.qml:

      import "foo.js" as Bar
      import QtQuick 2.0
      
      Item {
        width: 100
        height: 100
        Component.onCompleted: Bar.foo()
      }
      

      foo.js:

      function foo()
      {
      print() )
      }
      

      Running the above QML application causes a crash in QDeclarativeVME::run(QDeclarativeContextData *, QDeclarativeScriptData *) due to missing error handling when JS compilation fails.

      Attachments

        For Gerrit Dashboard: QTBUG-22843
        # Subject Branch Project Status CR V

        Activity

          People

            kenthans Kent Hansen (Inactive)
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes